# climbot6d_path_planning

./: CMakeLists.txt  Makefile  README.md  cmakelist.txt_nlopt
dlib-19.21/: setup.py
dlib-19.21/dlib/: CMakeLists.txt  config.h  revision.h  test_for_odr_violations.h
dlib-19.21/dlib/all/: source.cpp
dlib-19.21/dlib/cuda/: cpu_dlib.cpp  cpu_dlib.h  cuda_dlib.h  cudnn_dlibapi.cpp  tensor_tools.cpp  tensor_tools.h
dlib-19.21/docs/: algorithms.html  api.html  bayes.html  books.html  change_log.html  compile.html  compression.html  containers.html  dnn_dcgan_train_ex.cpp.html  dnn_introduction3_ex.cpp.html  faq.html  git-logs.html  graph_tools.html  howto_contribute.html  imaging.html  index.html  intro.html  kernel_1a.html  kernel_1b.html  kernel_1c.html  kernel_1da.html  kernel_1db.html  kernel_1ea.html  kernel_1eb.html  kernel_1ec.html  kernel_2a.html  kernel_3a.html  kernel_3b.html  license.html  linear_algebra.html  metaprogramming.html  ml.html  network.html  old_release_notes.html  optimization.html  other.html  parsing.html  release_notes.html  term_index.html
dlib-19.21/examples/: dnn_dcgan_train_ex.cpp  dnn_introduction3_ex.cpp
include/: Astar.h  Coordinate.h  Kine.h  QTree.h  QuadTree.h  cubicSpline.h  environment.h  gaitplan.h  generateSimData.h  globalpath.h  gpoptidata.h  grippointopti.h  grippointopti_copy  m_Matrix.h  motionplan.h  pathallocate.h  pole.h  robotTorque.h
plotpath/: path0.txt  path1.txt  plotpath.py  quadplot.py
src/: Coordinate.cpp  Kine.cpp  QTree.cpp  QuadTree.cpp  cubicSpline.cpp  gaitplan.cpp  generateSimData.cpp  globalpath.cpp  gpoptidata.cpp  jointvalue.txt  m_Matrix.cpp  main  main.cpp  motionplan.cpp  myfile.txt  pathallocate.cpp  pole.cpp  robotTorque.cpp  singleStepJointValue.txt  str.h
(+49 files in other folders)
